[gd_scene load_steps=2 format=3 uid="uid://417fy0rbk3eo"]

[ext_resource type="Script" uid="uid://bxiv7jg0y2nwx" path="res://UI/VarList/Util/string_change_dialog.gd" id="1_mvr0f"]

[node name="StringChangeDialog" type="ConfirmationDialog"]
auto_translate_mode = 1
size = Vector2i(295, 100)
visible = true
script = ExtResource("1_mvr0f")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 287.0
offset_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="canceled" from="." to="." method="_on_canceled"]
[connection signal="confirmed" from="." to="." method="_on_confirmed"]
[connection signal="text_changed" from="VBoxContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
